Fix table background and spacing
Changing the wallpaper brought out that the table was transparent in certain areas.

Seemed kind of annoying to have to move your head to see all the data so I condensed it to a smaller area.

--- a/hesed_v02/global.css
+++ b/hesed_v02/global.css
@@ -42,7 +42,10 @@ body{
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2%;
 }
 
 td, th {
@@ -53,4 +56,8 @@ td, th {
 
 tr:nth-child(even) {
     background-color: #dddddd;
+}
+
+tr:nth-child(odd) {
+    background-color: #ffffff;
 }
